# claude-negotiate

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/facilitator/: SKILL.md
.claude/skills/staffmtg/: SKILL.md
deploy/: claude-negotiate.service
docs/: c-c-feedback.md  multi-model-convos-plan.md
skills/designsession/: SKILL.md
skills/negotiate/: SKILL.md
skills/staffmtg/: SKILL.md
src/claude_negotiate/: __init__.py  server.py  store.py
tests/: test_store.py
