# Author: PB and Claude
# Date: 2026-02-28
# License: (c) Patrick Ball, 2026, GPL-2 or newer
#
# claude-negotiate/pyproject.toml

[project]
name = "claude-negotiate"
version = "0.1.0"
description = "MCP server for structured negotiation between Claude Code instances"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "redis",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
claude-negotiate = "claude_negotiate.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_negotiate"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
